infra/k8s/aws/overlays/production/shared/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-app-route
spec:
  hostnames:
    - app.soranix.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-web-route
spec:
  hostnames:
    - web.soranix.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-admin-route
spec:
  hostnames:
    - admin.soranix.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-api-route
spec:
  hostnames:
    - api.soranix.com
